# fake-news-detection

./: .gitignore  CLAUDE.md  Progress_Report.md  README.md  SETUP.md  config.yaml  demo_app.py  demo_predict.py  pyproject.toml  requirements.txt
.planning/: MILESTONES.md  PROJECT.md  RETROSPECTIVE.md  ROADMAP.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-data-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-04-PLAN.md  01-05-PLAN.md  01-06-PLAN.md  01-07-PLAN.md  01-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
app/: streamlit_app.py
chapters/: chapter3_methodology.tex  chapter4_results.tex
data/probe/: code_mixed_probe.csv
models/: .gitignore
notebooks/: 01_train_classical.ipynb  02_train_xlmr_colab.ipynb  03_train_transformer_colab.ipynb
reports/: classical_baselines_report.md  classical_metrics.json  corpus_report.md  dataset_stats.csv  dataset_stats.md  model_comparison.csv  model_comparison.md  transformer_selection_report.md
scripts/: train_colab.py  train_local.py
src/: config.py  pipeline.py  preprocess.py  report_assets.py
src/data/: acquire.py  build_corpus.py  dedup.py  download.py  label_map.py  language.py  leakage_probe.py  leakage_strip.py  preprocess.py  schema.py  split.py
src/fusion/: fuse.py
src/models/: calibration.py  classical.py  leakage_recheck.py  metrics.py  select_transformer.py  train_classical.py  transformer.py  transformer_data.py  transformer_infer.py  transformer_train.py  vectorizer.py
src/modules/: credibility.py  domain_credibility.json  style.py  style_lexicon.json  verify.py
tests/: conftest.py  test_acquire.py  test_build_corpus.py  test_calibration.py  test_cascade.py  test_dedup.py  test_export_contract.py  test_leakage_probe.py  test_leakage_recheck.py  test_leakage_strip.py  test_metrics.py  test_preprocess.py  test_schema.py  test_select_transformer.py  test_selection_report.py  test_split_disjoint.py  test_threshold.py  test_train_classical.py  test_transformer_infer.py  test_transformer_leakage.py  test_vectorizer.py  test_weighted_trainer.py
