[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-news-detection"
version = "0.1.0"
description = "AI-driven real-time detection of fake news and malicious content (Bangla + English)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow==24.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: marks slow integration tests (leakage probe)",
]
